--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
 		"react-native": "0.45.1"
 	},
 	"devDependencies": {
+		"babel-eslint": "^7.2.3",
 		"babel-jest": "20.0.3",
 		"babel-preset-react-native": "2.0.0",
+		"eslint": "^4.1.1",
+		"eslint-plugin-babel": "^4.1.1",
+		"eslint-plugin-react": "^7.1.0",
 		"jest": "20.0.4",
 		"react-test-renderer": "16.0.0-alpha.12"
 	},
