--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
 		"test:watch": "jest --watch",
 		"test:coverage": "jest --coverage && open coverage/lcov-report/index.html || xdg-open coverage/lcov-report/index.html",
 		"android:build": "cd android && ./gradlew assembleRelease",
+		"android:clean": "cd android && ./gradlew clean",
 		"android:install": "cd android && ./gradlew assembleRelease && ./gradlew installRelease",
 		"android:hockeyapp": "cd android && ./gradlew assembleRelease && puck -submit=auto app/build/outputs/apk/app-release.apk",
 		"android:devices": "$ANDROID_HOME/platform-tools/adb devices",
 		"android:logcat": "$ANDROID_HOME/platform-tools/adb logcat *:S ReactNative:V ReactNativeJS:V",
 		"android:shake": "$ANDROID_HOME/platform-tools/adb devices | grep '\\t' | awk '{print $1}' | sed 's/\\s//g' | xargs -I {} $ANDROID_HOME/platform-tools/adb -s {} shell input keyevent 82",
-		"clean": "rm -rf $TMPDIR/react-* && watchman watch-del-all && yarn cache clean",
+		"ios:clean": "rm -rf ios/build",
+		"cache:clean": "rm -rf $TMPDIR/react-* && watchman watch-del-all && yarn cache clean",
 		"reset": "rm -rf $TMPDIR/react-* && watchman watch-del-all && rm -rf ios/build && rm -rf node_modules/ && yarn cache clean && yarn install"
 	},
 	"dependencies": {
