--- a/package.json
+++ b/package.json
@@ -1,40 +1,44 @@
 {
-	"name": "ReactNativeSampleApp",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"lint": "eslint *.js src __tests__",
-		"test": "jest",
-		"test:watch": "jest --watch",
-		"test:coverage": "jest --coverage && open coverage/lcov-report/index.html || xdg-open coverage/lcov-report/index.html",
-		"android:build": "cd android && ./gradlew assembleRelease",
-		"android:clean": "cd android && ./gradlew clean",
-		"android:install": "cd android && ./gradlew assembleRelease && ./gradlew installRelease",
-		"android:hockeyapp": "cd android && ./gradlew assembleRelease && puck -submit=auto app/build/outputs/apk/app-release.apk",
-		"android:devices": "$ANDROID_HOME/platform-tools/adb devices",
-		"android:logcat": "$ANDROID_HOME/platform-tools/adb logcat *:S ReactNative:V ReactNativeJS:V",
-		"android:shake": "$ANDROID_HOME/platform-tools/adb devices | grep '\\t' | awk '{print $1}' | sed 's/\\s//g' | xargs -I {} $ANDROID_HOME/platform-tools/adb -s {} shell input keyevent 82",
-		"ios:clean": "rm -rf ios/build",
-		"cache:clean": "rm -rf $TMPDIR/react-* && watchman watch-del-all && yarn cache clean",
-		"reset": "rm -rf $TMPDIR/react-* && watchman watch-del-all && rm -rf ios/build && rm -rf node_modules/ && yarn cache clean && yarn install"
-	},
-	"dependencies": {
-		"react": "16.0.0-alpha.12",
-		"react-native": "0.47.2",
-		"react-navigation": "^1.0.0-beta.11"
-	},
-	"devDependencies": {
-		"babel-eslint": "^7.2.3",
-		"babel-jest": "20.0.3",
-		"babel-preset-react-native": "2.0.0",
-		"eslint": "^4.1.1",
-		"eslint-plugin-babel": "^4.1.1",
-		"eslint-plugin-react": "^7.1.0",
-		"jest": "20.0.4",
-		"react-test-renderer": "16.0.0-alpha.12"
-	},
-	"jest": {
-		"preset": "react-native"
-	}
+    "name": "ReactNativeSampleApp",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "start": "node node_modules/react-native/local-cli/cli.js start",
+        "lint": "eslint *.js src __tests__",
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "test:coverage": "jest --coverage && open coverage/lcov-report/index.html || xdg-open coverage/lcov-report/index.html",
+        "android:build": "cd android && ./gradlew assembleRelease",
+        "android:clean": "cd android && ./gradlew clean",
+        "android:install": "cd android && ./gradlew assembleRelease && ./gradlew installRelease",
+        "android:hockeyapp": "cd android && ./gradlew assembleRelease && puck -submit=auto app/build/outputs/apk/app-release.apk",
+        "android:devices": "$ANDROID_HOME/platform-tools/adb devices",
+        "android:logcat": "$ANDROID_HOME/platform-tools/adb logcat *:S ReactNative:V ReactNativeJS:V",
+        "android:shake": "$ANDROID_HOME/platform-tools/adb devices | grep '\\t' | awk '{print $1}' | sed 's/\\s//g' | xargs -I {} $ANDROID_HOME/platform-tools/adb -s {} shell input keyevent 82",
+        "ios:clean": "rm -rf ios/build",
+        "cache:clean": "rm -rf $TMPDIR/react-* && watchman watch-del-all && yarn cache clean",
+        "reset": "rm -rf $TMPDIR/react-* && watchman watch-del-all && rm -rf ios/build && rm -rf node_modules/ && yarn cache clean && yarn install"
+    },
+    "dependencies": {
+        "react": "16.0.0-alpha.12",
+        "react-native": "0.47.2",
+        "react-navigation": "^1.0.0-beta.11"
+    },
+    "devDependencies": {
+        "babel-eslint": "^7.2.3",
+        "babel-jest": "20.0.3",
+        "babel-preset-react-native": "2.0.0",
+        "eslint": "^4.1.1",
+        "eslint-plugin-babel": "^4.1.1",
+        "eslint-plugin-react": "^7.1.0",
+        "jest": "20.0.4",
+        "react-test-renderer": "16.0.0-alpha.12"
+    },
+    "jest": {
+        "preset": "react-native",
+        "verbose": true,
+        "transformIgnorePatterns": [
+            "node_modules/(?!(jest-)?react-native|react-navigation|react-clone-referenced-element|react-test-renderer)"
+        ]
+    }
 }
