add scripts/*.sh based on MyanmarAlphabetKids app

--- a/package.json
+++ b/package.json
@@ -8,17 +8,21 @@
         "test": "jest",
         "test:watch": "jest --watch",
         "test:coverage": "jest --coverage && open coverage/lcov-report/index.html || xdg-open coverage/lcov-report/index.html",
-        "android:build": "cd android && ./gradlew assembleRelease",
         "android:clean": "cd android && ./gradlew clean",
-        "android:install": "cd android && ./gradlew assembleRelease && ./gradlew installRelease",
-        "android:hockeyapp": "cd android && ./gradlew assembleRelease && puck -submit=auto app/build/outputs/apk/app-release.apk",
         "android:devices": "$ANDROID_HOME/platform-tools/adb devices",
         "android:logcat": "$ANDROID_HOME/platform-tools/adb logcat *:S ReactNative:V ReactNativeJS:V",
         "android:shake": "$ANDROID_HOME/platform-tools/adb devices | grep '\\t' | awk '{print $1}' | sed 's/\\s//g' | xargs -I {} $ANDROID_HOME/platform-tools/adb -s {} shell input keyevent 82",
+        "android:build": "scripts/gradlebuild.sh apk",
+        "android:install": "scripts/gradlebuild.sh install",
+        "android:uninstall": "scripts/gradlebuild.sh uninstall",
+        "ios:build": "scripts/xcodebuild.sh ipa",
         "ios:clean": "rm -rf ios/build",
+        "version:bump": "scripts/version.sh bump patch",
+        "build": "scripts/build.sh",
+        "build-release": "scripts/build.sh && scripts/build.sh release",
+        "code-push": "scripts/code-push.sh release",
         "cache:clean": "rm -rf $TMPDIR/react-* && watchman watch-del-all && yarn cache clean",
-        "reset": "rm -rf $TMPDIR/react-* && watchman watch-del-all && rm -rf ios/build && rm -rf node_modules/ && yarn cache clean && yarn install"
-    },
+        "reset": "rm -rf $TMPDIR/react-* && watchman watch-del-all && rm -rf ios/build && rm -rf android/.gradle && rm -rf android/app/build && rm -rf node_modules/ && yarn cache clean && yarn install"    },
     "dependencies": {
         "react": "16.0.0-alpha.12",
         "react-native": "0.47.2",
