--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
         "build-release": "scripts/build.sh && scripts/build.sh release",
         "code-push": "scripts/code-push.sh release",
         "cache:clean": "rm -rf $TMPDIR/react-* && watchman watch-del-all && yarn cache clean",
-        "reset": "rm -rf $TMPDIR/react-* && watchman watch-del-all && rm -rf ios/build && rm -rf android/.gradle && rm -rf android/app/build && rm -rf node_modules/ && yarn cache clean && yarn install"    },
+        "reset": "rm -rf $TMPDIR/react-* && watchman watch-del-all && rm -rf ios/build && rm -rf android/.gradle && rm -rf android/app/build && rm -rf node_modules/ && yarn cache clean && yarn install"
+    },
     "dependencies": {
-        "react": "16.0.0-alpha.12",
-        "react-native": "0.47.2",
+        "react": "16.0.0-beta.5",
+        "react-native": "0.49.3",
         "react-navigation": "^1.0.0-beta.11"
     },
     "devDependencies": {
