--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:2.3.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -22,3 +22,17 @@ allprojects {
         }
     }
 }
+
+subprojects {
+    // Based on: https://github.com/oblador/react-native-keychain/issues/68#issuecomment-304836725
+    // Force all subprojects to use the same buildToolsVersion as defined in app/build.gradle
+    afterEvaluate {project ->
+        if (project.hasProperty("android")) {
+            android {
+                compileSdkVersion 23
+                buildToolsVersion '25.0.2'
+            }
+        }
+    }
+}
+
