--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dependencies": {
         "react": "16.0.0-beta.5",
         "react-native": "0.49.3",
+        "react-native-code-push": "^5.1.3-beta",
         "react-navigation": "^1.0.0-beta.11"
     },
     "devDependencies": {
