--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "reset": "rm -rf $TMPDIR/react-* && watchman watch-del-all && rm -rf ios/build && rm -rf android/.gradle && rm -rf android/app/build && rm -rf node_modules/ && yarn cache clean && yarn install"
     },
     "dependencies": {
+        "lodash": "^4.17.4",
         "react": "16.0.0-beta.5",
         "react-native": "0.49.3",
         "react-native-code-push": "^5.1.3-beta",
