--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "react": "16.0.0-beta.5",
         "react-native": "0.49.3",
         "react-native-code-push": "^5.1.3-beta",
+        "react-native-device-info": "^0.12.1",
         "react-navigation": "^1.0.0-beta.11"
     },
     "devDependencies": {
