--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,12 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+
+# Generate new Signed APK key and change and put these in global properties (~/.gradle/gradle.properties)
+# https://facebook.github.io/react-native/docs/signed-apk-android.html
+# https://developer.android.com/studio/publish/app-signing.html#signing-manually
+# $ keytool -genkey -v -keystore dummy.keystore -alias dummy -keyalg RSA -keysize 2048 -validity 100000
+DUMMY_RELEASE_STORE_FILE=dummy.keystore
+DUMMY_RELEASE_KEY_ALIAS=dummy
+DUMMY_RELEASE_STORE_PASSWORD=dummydummy
+DUMMY_RELEASE_KEY_PASSWORD=dummydummy
