--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
         "react-native": "0.49.3",
         "react-native-code-push": "^5.1.3-beta",
         "react-native-device-info": "^0.12.1",
-        "react-navigation": "^1.0.0-beta.11"
+        "react-navigation": "^1.0.0-beta.11",
+        "react-redux": "^5.0.6",
+        "redux": "^3.7.2"
     },
     "devDependencies": {
         "babel-eslint": "^7.2.3",
