--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -220,6 +220,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-vector-icons')
     compile project(':react-native-device-info')
     compile project(':react-native-code-push')
     compile fileTree(dir: "libs", include: ["*.jar"])
