--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "private": true,
     "scripts": {
         "start": "node node_modules/react-native/local-cli/cli.js start",
-        "lint": "eslint *.js src __tests__",
+        "lint": "eslint *.js src test",
+        "lint:fix": "eslint --fix *.js src test",
         "test": "jest",
         "test:watch": "jest --watch",
         "test:coverage": "jest --coverage && open coverage/lcov-report/index.html || xdg-open coverage/lcov-report/index.html",
@@ -33,7 +34,11 @@
         "react-native-vector-icons": "^4.4.2",
         "react-navigation": "^1.0.0-beta.11",
         "react-redux": "^5.0.6",
-        "redux": "^3.7.2"
+        "redux": "^3.7.2",
+        "redux-logger": "^3.0.6",
+        "redux-persist": "^5.3.4",
+        "redux-promise": "^0.5.3",
+        "redux-thunk": "^2.2.0"
     },
     "devDependencies": {
         "babel-eslint": "^7.2.3",
@@ -43,7 +48,8 @@
         "eslint-plugin-babel": "^4.1.1",
         "eslint-plugin-react": "^7.1.0",
         "jest": "20.0.4",
-        "react-test-renderer": "16.0.0-alpha.12"
+        "react-test-renderer": "16.0.0-alpha.12",
+        "remote-redux-devtools": "^0.5.12"
     },
     "jest": {
         "preset": "react-native",
