--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     },
     "dependencies": {
         "lodash": "^4.17.4",
-        "react": "16.0.0-beta.5",
-        "react-native": "0.49.3",
+        "react": "16.0.0",
+        "react-native": "0.50.3",
         "react-native-code-push": "^5.1.3-beta",
         "react-native-device-info": "^0.12.1",
         "react-native-vector-icons": "^4.4.2",
