--- a/package.json
+++ b/package.json
@@ -41,14 +41,14 @@
         "redux-thunk": "^2.2.0"
     },
     "devDependencies": {
-        "babel-eslint": "^7.2.3",
-        "babel-jest": "20.0.3",
-        "babel-preset-react-native": "2.0.0",
-        "eslint": "^4.1.1",
-        "eslint-plugin-babel": "^4.1.1",
-        "eslint-plugin-react": "^7.1.0",
-        "jest": "20.0.4",
-        "react-test-renderer": "16.0.0-alpha.12",
+        "babel-eslint": "^8.0.2",
+        "babel-jest": "^21.2.0",
+        "babel-preset-react-native": "^4.0.0",
+        "eslint": "^4.11.0",
+        "eslint-plugin-babel": "^4.1.2",
+        "eslint-plugin-react": "^7.4.0",
+        "jest": "^21.2.1",
+        "react-test-renderer": "^16.1.0",
         "remote-redux-devtools": "^0.5.12"
     },
     "jest": {
