--- a/package.json
+++ b/package.json
@@ -26,19 +26,21 @@
         "reset": "rm -rf $TMPDIR/react-* && watchman watch-del-all && rm -rf ios/build && rm -rf android/.gradle && rm -rf android/app/build && rm -rf node_modules/ && yarn cache clean && yarn install"
     },
     "dependencies": {
+        "json-stringify-safe": "^5.0.1",
         "lodash": "^4.17.4",
         "react": "16.0.0",
         "react-native": "0.51.0",
         "react-native-code-push": "^5.1.3-beta",
         "react-native-device-info": "^0.12.1",
         "react-native-vector-icons": "^4.4.2",
-        "react-navigation": "^1.0.0-beta.11",
+        "react-navigation": "^1.0.0-beta.23",
         "react-redux": "^5.0.6",
         "redux": "^3.7.2",
         "redux-logger": "^3.0.6",
         "redux-persist": "^5.3.4",
         "redux-promise": "^0.5.3",
-        "redux-thunk": "^2.2.0"
+        "redux-thunk": "^2.2.0",
+        "uuid": "^3.1.0"
     },
     "devDependencies": {
         "babel-eslint": "^8.0.2",
