--- a/package.json
+++ b/package.json
@@ -43,14 +43,14 @@
         "uuid": "^3.1.0"
     },
     "devDependencies": {
-        "babel-eslint": "^8.0.2",
-        "babel-jest": "^21.2.0",
-        "babel-preset-react-native": "^4.0.0",
-        "eslint": "^4.11.0",
+        "babel-eslint": "^8.1.2",
+        "babel-jest": "22.0.4",
+        "babel-preset-react-native": "4.0.0",
+        "eslint": "^4.15.0",
         "eslint-plugin-babel": "^4.1.2",
-        "eslint-plugin-react": "^7.4.0",
-        "jest": "^21.2.1",
-        "react-test-renderer": "^16.1.0",
+        "eslint-plugin-react": "^7.5.1",
+        "jest": "22.0.4",
+        "react-test-renderer": "16.0.0",
         "remote-redux-devtools": "^0.5.12"
     },
     "jest": {
